--- a/task-02.html
+++ b/task-02.html
@@ -7,6 +7,8 @@
         <title>task-02</title>
     </head>
     <body>
+        <p><a href="./index.html">На главную</a></p>
+
         <script src="./js/task-02.js" type="module"></script>
     </body>
 </html>
